# templates

./: README.md  flake.nix
common/: .envrc  flake.nix  treefmt.toml
common/devshell/: default.nix
cpp/: .clang-tidy  .envrc  .gitignore  CMakeLists.txt  README.md  flake.nix  treefmt.toml
cpp/app/: CMakeLists.txt  main.cpp
cpp/cmake/: Config.cmake.in  functions.cmake
cpp/core/: CMakeLists.txt
cpp/core/application/: CMakeLists.txt  application.hpp  version.hpp.in
cpp/core/application/impl/: application_impl.cpp  application_impl.hpp
cpp/core/module1/: CMakeLists.txt  module1.hpp
cpp/core/module1/impl/: module1_impl.cpp  module1_impl.hpp
cpp/core/module2/: CMakeLists.txt  module2.hpp
cpp/core/module2/impl/: module2_impl.cpp  module2_impl.hpp
cpp/devshell/: default.nix  format.nix  package.nix
cpp/tests/core/application/: CMakeLists.txt  application_test.cpp
go/: .codespellrc  .gitignore  .golangci.yaml  .goreleaser.yaml  Makefile  flake.nix  go.mod  go.sum  treefmt.toml
go/.github/: dependabot.yaml
go/.github/workflows/: go.yaml  lints.yaml  nix.yaml  release.yaml
go/cmd/fixa/: main.go
go/dev-support/: codespell-ignore
go/devshell/: default.nix  format.nix  package.nix
go/internal/consts/: consts.go
go/pkg/commands/completion/: completion.go
go/pkg/commands/root/: root.go
go/pkg/commands/version/: version.go
go/pkg/version/: version.go
nodejs/: .codespellrc  .dockerignore  .gitignore  treefmt.toml
nodejs/.github/: dependabot.yaml
nodejs/devshell/: default.nix
python/: flake.nix  pyproject.toml  treefmt.toml
python/dev-support/containers/: docker-bake.hcl
python/dev-support/containers/alpine/: Containerfile
python/devshell/: default.nix  format.nix  package.nix
python/src/fixa/: cli.py
rust/: Cargo.toml
rust/.github/workflows/: lints.yaml  nix.yaml  rust.yaml
rust/cli/: Cargo.toml
rust/cli/src/: consts.rs  error.rs  lib.rs
rust/cli/src/subcommand1/: mod.rs
rust/cli/src/subcommand2/: config.rs  error.rs
rust/dev-support/containers/distroless/: Containerfile
rust/devshell/: default.nix  format.nix
rust/src/: main.rs
