[workspace.package]
version     = "0.0.0"
authors     = ["author <author@localhost>"]
homepage    = "https://github.com/xrelkd"
repository  = "https://github.com/xrelkd/templates"
readme      = "README.md"
license     = "GPL-3.0-only"
edition     = "2021"
description = "Rust template"
categories  = ["command-line-utilities"]
keywords    = ["template"]

[package]
name                  = "fixa"
version.workspace     = true
readme.workspace      = true
authors.workspace     = true
homepage.workspace    = true
repository.workspace  = true
license.workspace     = true
edition.workspace     = true
description.workspace = true
categories.workspace  = true
keywords.workspace    = true

[[bin]]
name = "fixa"
path = "src/main.rs"

[dependencies]
fixa-cli = { path = "./cli" }

[workspace]
members = ["cli"]
