[package]
name                 = "fixa-cli"
description          = "CLI"
version.workspace    = true
authors.workspace    = true
homepage.workspace   = true
readme.workspace     = true
repository.workspace = true
license.workspace    = true
edition.workspace    = true
categories.workspace = true
keywords.workspace   = true

[dependencies]
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

futures = "0.3"
tokio = { version = "1", features = [
  "fs",
  "io-util",
  "rt-multi-thread",
  "signal",
] }

clap          = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
exitcode      = "1"
snafu         = "0.7"

[lints]
workspace = true
